--- a/style.css
+++ b/style.css
@@ -34,13 +34,24 @@
 	clear: left;
 	white-space: pre;
 	display: flex;
-	
+
 }
 
 ul {
 	list-style-type: none;
 }
 
+#tabs {
+    margin-left:auto;
+    margin-right:auto;
+    max-width: 500px;
+    padding: 25px 25px 5px 0px;
+    font: 12px Georgia, "Times New Roman", Times, serif;
+}
+
+.tab {
+	height: 30px;
+}
 
 /* Basic Grey */
 .basic-grey {
