--- a/css/style.css
+++ b/css/style.css
@@ -11,30 +11,29 @@
 }
 
 .smiley1 {
-  background: url("emoticons.png") no-repeat -2px 0;
+  background: url("../assets/emoticons.png") no-repeat -2px 0;
 }
 
 .smiley2 {
-  background: url("emoticons.png") no-repeat -42px 0;
+  background: url("../assets/emoticons.png") no-repeat -42px 0;
 }
 
 .smiley3 {
-  background: url("emoticons.png") no-repeat -82px 0;
+  background: url("../assets/emoticons.png") no-repeat -82px 0;
 }
 
 .smiley4 {
-  background: url("emoticons.png") no-repeat -122px 0;
+  background: url("../assets/emoticons.png") no-repeat -122px 0;
 }
 
 .smiley5 {
-  background: url("emoticons.png") no-repeat -162px 0;
+  background: url("../assets/emoticons.png") no-repeat -162px 0;
 }
 
 #inputTags {
 	clear: left;
 	white-space: pre;
 	display: flex;
-
 }
 
 ul {
@@ -109,8 +108,7 @@ ul {
     padding: 5px 3px 3px 5px;
 }
 .basic-grey select {
-    background: #FFF url('down-arrow.png') no-repeat right;
-    background: #FFF url('down-arrow.png') no-repeat right);
+    background: #FFF url('../assets/down-arrow.png') no-repeat right;
     appearance:none;
     -webkit-appearance:none; 
     -moz-appearance: none;
