--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ ul {
 	height: 30px;
 }
 
-/* Basic Grey */
+/* Basic Grey  CSS based on: http://www.sanwebe.com/2013/10/css-html-form-styles */
 .basic-grey {
     margin-left:auto;
     margin-right:auto;
